# bbcpr

./: CONTRIBUTING.md  DESCRIPTION.md  README.md  install.sh  quick-test.sh  uninstall.sh
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: package-release.yml  rust-ci.yml
packaging/: README.md
packaging/arch/: .SRCINFO  PKGBUILD
packaging/chocolatey/: bbcpr.nuspec
packaging/chocolatey/tools/: chocolateyinstall.ps1  chocolateyuninstall.ps1
packaging/debian/bbcpr/debian/: changelog  control  copyright  rules
packaging/homebrew/: bbcpr.rb
packaging/rpm/: bbcpr.spec
packaging/snap/: snapcraft.yaml
rust/: Cargo.toml  bbcpr_resume_test  bbcpr_test  build.sh  pre_release_check.sh
rust/release/: RELEASE_NOTES.md  bbcpr-v0.1.0-x86_64-linux
rust/src/: auth.rs  cli.rs  error.rs  lib.rs  main.rs  standalone_main.rs
rust/src/checksum/: adler32.rs  crc32.rs  md5.rs  mod.rs
rust/src/network/: mod.rs  protocol.rs  ssh.rs  tcp.rs
rust/src/platform/: common.rs  mod.rs
rust/src/transfer/: engine.rs  mod.rs  progress.rs  state.rs  stream.rs
wiki/: Command-Reference.md  Home.md  Installation-Guide.md  Performance-Guide.md  Quick-Start.md  Troubleshooting.md
