[package]
name = "bbcpr"
version = "0.2.0"
edition = "2021"
authors = ["Andrew Mello <andrew@88plug.com>"]
description = "Berkeley Byte Copy Rust - high-performance parallel file transfer with single-file multi-threading and resume functionality"
repository = "https://github.com/88plug/bbcpr"
license = "GPL-3.0"
keywords = ["file-transfer", "parallel", "ssh", "copy", "network"]
categories = ["command-line-utilities", "filesystem", "network-programming"]

[dependencies]
# CLI and configuration
clap = { version = "4.5", features = ["derive", "env", "string"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
dirs = "5.0"

# Async runtime and networking
tokio = { version = "1.40", features = ["full"] }
tokio-util = { version = "0.7", features = ["io", "codec"] }
futures = "0.3"

# SSH support
ssh2 = "0.9"
openssh = "0.11"
async-trait = "0.1"

# Checksums
md5 = "0.7"
sha2 = "0.10"
blake3 = "1.5"
crc32fast = "1.4"
adler = "1.0"

# Progress and logging
indicatif = "0.17"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"
log = "0.4"

# Compression
zstd = "0.13"
flate2 = "1.0"

# Serialization
bincode = "1.3"
bytes = "1.7"

# Authentication
rpassword = { version = "7.3", optional = true }

# Platform specific
socket2 = "0.5"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = ["Win32_Storage_FileSystem", "Win32_System_IO"] }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29", features = ["fs", "mman"] }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
tempfile = "3.13"
mockall = "0.13"
proptest = "1.5"

[[bench]]
name = "transfer"
harness = false

[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = 3

[profile.dev]
opt-level = 0

[profile.test]
opt-level = 2

[features]
default = ["rpassword"]